Finishing touches on rounding border, added spacing above titles and bolded them in right panel, fixed link section

--- a/css/movie.css
+++ b/css/movie.css
@@ -17,7 +17,7 @@ h1 {
     font-weight: bold;
     font-family: Tahoma,Verdana,sans-serif;
     text-shadow: 3px 3px #999999;
-    padding-top: 50px;
+    margin-top: 72px;
 }
 
 h2 {
@@ -30,14 +30,20 @@ p:nth-child(odd) {
     background-color: #E8DC9B;
     border: 2px solid gray;
     border-radius: 10px;
-    overflox: hidden;
+    overflow: hidden;
     padding: 5px;
+}
+
+/* I think we can use this to fix how the reviewer's name is displayed
+   but I haven't quite figured out how yet */
+p:nth-child(even) {
+
 }
 
 .mainPanel {
     width: 800px;
     border: 4px solid gray;
-    border-radius: 15px;
+    border-radius: 20px;
     overflow: hidden;
     margin: auto;
 }
@@ -78,7 +84,23 @@ p:nth-child(odd) {
 	padding-left: 2%;
 	padding-right: 1%;
 }
- 
+
+dl {
+    padding-left: 10px;
+    font-size: 8pt;
+    font-family: Arial, sans-serif;
+}
+
+dt {
+    padding-top: 10px;
+    font-weight: bold;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 .w3image {
 	float: right;
 	padding-right: 0px;
